--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,6 +26,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      body {
+        background-color: #0e1a1f;
+        font-family: Inter, sans-serif;
+        color: #fff;
+        font-size: 18px;
+        line-height: 1.75;
+        font-weight: 400;
+      }</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
